--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 /* Start Variables */
-:root {
-  
-}
 /* End Variables */
 /* Start Global Rules */
 body {
   font-family: "Roboto", sans-serif;
-}
-/* End Global Rules */
+}/*# sourceMappingURL=style.css.map */
