Adding Techs And Project Sections

--- a/css/style.css
+++ b/css/style.css
@@ -172,4 +172,10 @@ header .search svg {
   font-size: 13px;
 }
 
-/* End Team Section *//*# sourceMappingURL=style.css.map */
+/* End Team Section */
+/* Start Project Section */
+.project {
+  background-color: #19283f;
+}
+
+/* End Project Section *//*# sourceMappingURL=style.css.map */
