--- a/css/style.scss
+++ b/css/style.scss
@@ -190,3 +190,8 @@ header {
 	}
 }
 /* End Team Section */
+/* Start Project Section */
+.project {
+	background-color: $main;
+}
+/* End Project Section */
