--- a/css/style.css
+++ b/css/style.css
@@ -178,4 +178,39 @@ header .search svg {
   background-color: #19283f;
 }
 
-/* End Project Section *//*# sourceMappingURL=style.css.map */
+/* End Project Section */
+/* Start Newsletter Section */
+.newsletter {
+  background-color: #ffba0f;
+}
+.newsletter p {
+  color: #19283f;
+}
+.newsletter input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid white;
+  caret-color: #19283f;
+  border-radius: 0;
+}
+.newsletter input::-moz-placeholder {
+  color: white;
+}
+.newsletter input::placeholder {
+  color: white;
+}
+.newsletter input:focus {
+  outline: none;
+  box-shadow: none;
+  background-color: transparent;
+  border-color: white;
+}
+.newsletter button {
+  background-color: #19283f;
+  color: #ffba0f;
+}
+.newsletter button:hover {
+  color: #19283f;
+}
+
+/* End Newsletter Section *//*# sourceMappingURL=style.css.map */
