--- a/css/style.scss
+++ b/css/style.scss
@@ -195,3 +195,34 @@ header {
 	background-color: $main;
 }
 /* End Project Section */
+/* Start Newsletter Section */
+.newsletter {
+	background-color: $yellow;
+	p {
+		color: $main;
+	}
+	input {
+		background-color: transparent;
+		border: none;
+		border-bottom: 2px solid white;
+		caret-color: $main;
+		&::placeholder {
+			color: white;
+		}
+		border-radius: 0;
+		&:focus {
+			outline: none;
+			box-shadow: none;
+			background-color: transparent;
+			border-color: white;
+		}
+	}
+	button {
+		background-color: $main;
+		color: $yellow;
+		&:hover {
+			color: $main;
+		}
+	}
+}
+/* End Newsletter Section */
